# anth-hack

frontend/: .env.example  dev-log.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo
frontend/server/: index.ts
frontend/src/: App.tsx
frontend/src/components/: AgentLog.tsx  ArtifactList.tsx  FindingsPanel.tsx  PipelineRunner.tsx  ProgressTracker.tsx  SessionList.tsx
frontend/src/hooks/: usePipelineSession.ts
frontend/src/types/: pipeline.ts
test/: CONTEXT.md
test/biorepro/: pyproject.toml
test/biorepro/notebooks/: 01_data_qc.ipynb
test/biorepro/notebooks/.ipynb_checkpoints/: 01_data_qc-checkpoint.ipynb
test/biorepro/src/biorepro/: data.py
test/input/: paper_text.txt
test/nsclc_repro/: dataset.py
